# llm-playground

./: .gitignore  pyproject.toml
notebooks/langchain/: agents.ipynb  chatbot.ipynb  classification.ipynb  classify_text.ipynb  extraction.ipynb  llm_chain.ipynb  qa_chat_history.ipynb  rag.ipynb  retrievers.ipynb
src/: intro.py
