[project]
name = "llm-playground"
version = "0.1.0"
description = "For testing out LLM tools"
authors = [
    {name = "Javier Smith"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "langchain[openai] (>=0.3.21,<0.4.0)",
    "python-dotenv (>=1.0.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
log_level = "info"
log_cli = true
log_cli_level = "info"
log_format = "%(asctime)s %(name)s %(levelname)s %(message)s"
log_date_format="%Y-%m-%d %H:%M:%S"
filterwarnings = [
    'ignore::DeprecationWarning',
]
testpaths = [
    "tests",
]

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
pytest = "^8.3.5"

